<resources>
    <string name="app_name">LiMovieVoxWatch</string>
    <string name="gigNa">Digite seu nome</string>
    <string name="gigSenCad">Digite uma senha</string>
    <string name="gigSenLog">Digite sua senha</string>
    <string name="gigEmaillog">Digite seu email</string>
    <string name="gigEmailCad">Digite um email para cadastro</string>
    <string name="botEntr">Entrar</string>
    <string name="botLimpar">Limpar</string>
    <string name="botCadastrar">Cadastrar</string>
    <string name="botCadastro">Cadastro</string>
</resources>
